2009-08-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #11653: mergeFormDataIntoTemplateStructure incorrectly determines sections

2009-05-24  Tolleiv Nietsch <nietsch@aoemedia.de>

    * Fixed bug #3103:  Unit tests not DBAL-ready
    * Fixed bug #11174: test_localizeElement and test_localizeElement_workspaces if there is no sys_lang-record
    * Fixed bug #11172: Unit test don't run within latest PHPUnit

2009-03-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10615: Show sys_notes in Page Module 
	* Fixed bug #10643: Page and TO icons aren't shown anymore 
	* Fixed bug #10662: CREATE/UPDATE of DS/TO in TV wizard doesn't work (SVN rev. 17700) 
	* Fixed bug #10685: incorrect next_ds and next_to: workspace overlay missing in page module 
	* Fixed bug #10661: "Show XML" button doesn't work (SVN rev. 17700)

2009-03-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10644: Links to "create" in Template Files (mod2) are broken

2009-03-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10636: Show mapping-links and -commands while editing a field

2009-03-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10633: cm1 need to be localized

2009-03-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10618: Wrong returnUrl in record list

2009-03-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Moved code for getDynTabMenu in the new "New CE wizard" to be compatible with TYPO3 RFC #10601

2009-03-03  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10593: External URLs of type https:// are not displayed correctly under the TV Page-Mod (thanks to Dirk Diebel)

2009-02-28  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9931: Drag'n Drop patch carries destructive Sorting-Bug
	* Fixed bug #7767: CSH help texts are missing (thanks to Benjamin Mack)

2009-02-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10557: No resizing for previewIcons (DS and TO)
	* Fixed bug #10553: Mapping Module loose Typoscript

2009-02-26  Steffen Kamper  <info@sk-typo3.de>